--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MeetingRoom</string>
-    <string name="title_activity_meeting_list">MeetingListActivity</string>
+    <string name="title_activity_meeting_list">Meeting Room</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
